--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -12,7 +12,7 @@ on:
     paths:
       - 'docker/tools/**'
     branches:
-      - 'master'
+      - 'main'
   schedule:
     - cron: '0 0 * * 1' # Run every Monday at 12:00 AM UTC
 
