--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -1,10 +1,12 @@
+# yamllint disable rule:line-length
+---
 name: Docker - CI tooling for GitHub Actions
 
 # This workflow builds the CI tooling from docker/tools/
 # within this repository. It runs whenever a file inside
 # is modified, and on a weekly schedule to get updates.
 
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
     paths:
       - 'docker/tools/**'
@@ -14,7 +16,7 @@ on:
     branches:
       - 'main'
   schedule:
-    - cron: '0 0 * * 1' # Run every Monday at 12:00 AM UTC
+    - cron: '0 0 * * 1'  # Run every Monday at 12:00 AM UTC
 
 # Make sure to cancel previous job runs in case a PR
 # gets new commits. Changes being merged to the main
@@ -34,21 +36,21 @@ jobs:
           - 'latest'
 
     runs-on: ubuntu-latest
- 
+
     steps:
-    - uses: actions/checkout@v3
-    - uses: docker/setup-buildx-action@v2
-    - uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-            
-    - name: 'Build tykio/ci-tools:latest'
-      uses: docker/build-push-action@v4
-      with:
-        push: ${{ github.ref_name == 'main' }}
-        pull: true
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        context: docker/tools/latest
-        tags: tykio/ci-tools:latest
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: 'Build tykio/ci-tools:latest'
+        uses: docker/build-push-action@v4
+        with:
+          push: ${{ github.ref_name == 'main' }}
+          pull: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: docker/tools/latest
+          tags: tykio/ci-tools:latest
