--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -31,6 +31,8 @@ concurrency:
 jobs:
   tools-latest:
     name: 'Build tykio/ci-tools:${{ matrix.tag }}'
+    permissions:
+      id-token: write
     strategy:
       fail-fast: false
       matrix:
