--- a/docker/base/Taskfile.yml
+++ b/docker/base/Taskfile.yml
@@ -3,7 +3,7 @@
 version: "3"
 
 vars:
-  image: internal/ci-tools
+  image: internal/ci-base
   platform: '{{.BUILD_PLATFORM | default "linux/amd64"}}'
 
 env:
@@ -14,7 +14,7 @@ tasks:
   default:
     desc: "Build docker images"
     vars:
-      tags: latest
+      tags: latest 5.0
       args: --rm --platform {{.platform}} --progress=plain --no-cache --pull
     cmds:
       - for:
