--- a/.github/workflows/5.2-test.yml
+++ b/.github/workflows/5.2-test.yml
@@ -30,7 +30,7 @@ env:
 
 jobs:
   test:
-    name: "POC: Go ${{ inputs.go-version }} Redis ${{ inputs.redis-version }}"
+    name: "Test: Go ${{ inputs.go-version }} Redis ${{ inputs.redis-version }}"
     runs-on: ubuntu-latest
 
     steps:
