Add tags, flags

--- a/.github/workflows/5.2-test.yml
+++ b/.github/workflows/5.2-test.yml
@@ -61,3 +61,6 @@ jobs:
 
       - name: "Run tests"
         uses: TykTechnologies/tyk-github-actions/.github/actions/gotestsum@main
+        with:
+          tags: 'goplugin'
+          args: '-race -count=1'
