Add a python_version env

--- a/.github/workflows/5.2-test.yml
+++ b/.github/workflows/5.2-test.yml
@@ -77,6 +77,8 @@ jobs:
 
       - name: "Run tests"
         uses: TykTechnologies/tyk-github-actions/.github/actions/gotestsum@main
+        env:
+          PYTHON_VERSION: ${{ inputs.python-version }}
         with:
           tags: "goplugin"
           args: "-race -count=1"
