Use ci-base:5.2 for the test workflow

--- a/.github/workflows/5.2-test.yml
+++ b/.github/workflows/5.2-test.yml
@@ -17,15 +17,9 @@ on:  # yamllint disable-line rule:truthy
 
     # Customize inputs from source repository invocation.
     inputs:
-      go-version:
-        type: string
-        default: "1.19.x"
       redis-version:
         type: string
         default: "6"
-      python-version:
-        type: string
-        default: "3.9"
 
 env:
   # Declare GOPRIVATE to enable fetching private repo packages.
@@ -35,6 +29,7 @@ jobs:
   test:
     name: "Test: Go ${{ inputs.go-version }} Redis ${{ inputs.redis-version }}"
     runs-on: ubuntu-latest
+    container: tykio/ci-base:5.2
 
     steps:
       - name: "Use GitHub token"
@@ -44,16 +39,6 @@ jobs:
 
       - name: "Checkout repository"
         uses: TykTechnologies/tyk-github-actions/.github/actions/checkout@main
-
-      - name: "Setup Go"
-        uses: actions/setup-go@v3
-        with:
-          go-version: ${{ inputs.go-version }}
-
-      - name: "Setup Python"
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ inputs.python-version }}
 
       - name: "Start Redis"
         uses: supercharge/redis-github-action@1.1.0
@@ -66,14 +51,6 @@ jobs:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: ${{ runner.os }}-go-
-
-      - name: "Install base dependencies"
-        run: |
-          sudo apt-get install libluajit-5.1-dev
-          python -m pip install --upgrade pip
-          pip install setuptools
-          pip install google
-          pip install protobuf
 
       - name: "Build test plugin"
         run: |
