ci-base: add git-lfs to support checkouts

--- a/docker/base/5.2/Dockerfile
+++ b/docker/base/5.2/Dockerfile
@@ -18,6 +18,7 @@ RUN apt -qq update && \
     apt -qqy install \
         curl \
         wget \
+        git-lfs \
         cython3 \
         pip \
         python3 \
