ci-base: define PYTHON_VERSION env

--- a/docker/base/latest/Dockerfile
+++ b/docker/base/latest/Dockerfile
@@ -50,3 +50,5 @@ COPY --from=docker /usr/local/bin/docker-compose /usr/local/bin/
 RUN docker compose version
 RUN go version
 RUN python3 -V
+
+ENV PYTHON_VERSION=3.11
