--- a/.github/workflows/5.0-preflight.yml
+++ b/.github/workflows/5.0-preflight.yml
@@ -3,9 +3,7 @@
 name: "Pre-flight checks"
 
 # This github workflow runs the minimal build checks that are required to
-# pass for any change. It builds the project and the tests, making sure
-# they both compile. The tests incidentally run all the `init` functions,
-# initiating connections to redis.
+# pass for any change. It builds the project.
 
 on:  # yamllint disable-line rule:truthy
   workflow_call:
@@ -15,19 +13,13 @@ on:  # yamllint disable-line rule:truthy
       ORG_GH_TOKEN:
         required: true
 
-    # Customize inputs from source repository invocation.
-    inputs:
-      redis-version:
-        type: string
-        default: "6"
-
 env:
   # Declare GOPRIVATE to enable fetching private repo packages.
   GOPRIVATE: github.com/TykTechnologies
 
 jobs:
   preflight:
-    name: "Preflight: Go ${{ inputs.go-version }} Redis ${{ inputs.redis-version }}"
+    name: "Preflight checks"
     runs-on: ubuntu-latest
     container: tykio/ci-base:5.0
     timeout-minutes: 10
@@ -40,11 +32,6 @@ jobs:
 
       - name: "Checkout repository"
         uses: TykTechnologies/tyk-github-actions/.github/actions/checkout@main
-
-      - name: "Start Redis"
-        uses: supercharge/redis-github-action@1.1.0
-        with:
-          redis-version: ${{ inputs.redis-version }}
 
       - name: "Configure Go Cache"
         uses: actions/cache@v3
