Configure TYK_GW_STORAGE_HOST as on release branches

--- a/.github/workflows/5.0-test.yml
+++ b/.github/workflows/5.0-test.yml
@@ -59,6 +59,7 @@ jobs:
       - name: "Run tests"
         uses: TykTechnologies/tyk-github-actions/.github/actions/gotestsum@main
         env:
+          TYK_GW_STORAGE_HOST: localhost
           PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: python
         with:
           tags: "goplugin"
