Extract and test a binary from tykio/ci-tools

--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -58,3 +58,12 @@ jobs:
           cache-to: type=gha,mode=max
           context: docker/tools/${{ matrix.tag }}
           tags: tykio/ci-tools:${{ matrix.tag }}
+
+      - name: 'Extract tykio/ci-tools:${{ matrix.tag }}'
+        uses: shrink/actions-docker-extract@v3
+        with:
+          image: tykio/ci-tools:${{ matrix.tag }}
+          path: /usr/local/bin/.
+          destination: /usr/local/bin
+
+      - run: gotestsum --version
