--- a/.github/workflows/ci-docker-tools.yml
+++ b/.github/workflows/ci-docker-tools.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           push: ${{ github.ref_name == 'main' }}
           pull: true
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           context: docker/tools/${{ matrix.tag }}
