--- a/.github/workflows/5.2-test.yml
+++ b/.github/workflows/5.2-test.yml
@@ -66,7 +66,7 @@ jobs:
       - name: "Run tests"
         uses: TykTechnologies/tyk-github-actions/.github/actions/gotestsum@main
         env:
-          TYK_GW_STORAGE_HOST: localhost
+          TYK_GW_STORAGE_HOST: redis
           PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: python
         with:
           tags: "goplugin"
