--- a/.github/workflows/5.0-dashboard.yml
+++ b/.github/workflows/5.0-dashboard.yml
@@ -1,6 +1,6 @@
 # yamllint disable rule:line-length
 ---
-name: Gateway 5.0 tests
+name: Dashboard 5.0 tests
 
 on:  # yamllint disable-line rule:truthy
   workflow_call:
