--- a/.github/workflows/5.2-gateway.yml
+++ b/.github/workflows/5.2-gateway.yml
@@ -16,11 +16,15 @@ concurrency:
 
 jobs:
   preflight:
-    uses: TykTechnologies/tyk-github-actions/.github/workflows/5.2-preflight.yml@main
+    uses: TykTechnologies/tyk-github-actions/.github/workflows/reuse-preflight.yml@main
+    with:
+      release: 5.2
     secrets:
       ORG_GH_TOKEN: ${{ secrets.ORG_GH_TOKEN }}
 
   test:
-    uses: TykTechnologies/tyk-github-actions/.github/workflows/5.2-test.yml@main
+    uses: TykTechnologies/tyk-github-actions/.github/workflows/reuse-test.yml@main
+    with:
+      release: 5.2
     secrets:
       ORG_GH_TOKEN: ${{ secrets.ORG_GH_TOKEN }}
