--- a/.github/workflows/5.0-dashboard.yml
+++ b/.github/workflows/5.0-dashboard.yml
@@ -18,13 +18,13 @@ jobs:
   preflight:
     uses: TykTechnologies/tyk-github-actions/.github/workflows/reuse-preflight.yml@main
     with:
-      release: 5.0
+      release: "5.0"
     secrets:
       ORG_GH_TOKEN: ${{ secrets.ORG_GH_TOKEN }}
 
   test:
     uses: TykTechnologies/tyk-github-actions/.github/workflows/reuse-test.yml@main
     with:
-      release: 5.0
+      release: "5.0"
     secrets:
       ORG_GH_TOKEN: ${{ secrets.ORG_GH_TOKEN }}
