--- a/.github/actions/checkout-pr/action.yml
+++ b/.github/actions/checkout-pr/action.yml
@@ -21,6 +21,7 @@ runs:
       with:
         ref: ${{ github.event.pull_request.head.ref }}
         fetch-depth: ${{ env.PR_FETCH_DEPTH }}
+        submodules: true
         lfs: true
 
     - name: 'Fetch the other branch with enough history for a common merge-base commit'
