--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -18,4 +18,5 @@ runs:
       with:
         ref: ${{ github.event.pull_request.head.ref }}
         fetch-depth: 1
+        submodules: true
         lfs: true
