--- a/.github/actions/checkout-pr/action.yml
+++ b/.github/actions/checkout-pr/action.yml
@@ -8,6 +8,9 @@ description: >-
 inputs:
   jobname:
     default: ${{ github.job }}
+  token:
+    description: 'A Github PAT'
+    required: true
 
 runs:
   using: "composite"
@@ -20,6 +23,7 @@ runs:
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.pull_request.head.ref }}
+        token: ${{ inputs.token }}
         fetch-depth: ${{ env.PR_FETCH_DEPTH }}
         submodules: true
         lfs: true
