--- a/.github/actions/gotestsum/action.yml
+++ b/.github/actions/gotestsum/action.yml
@@ -41,7 +41,7 @@ runs:
       if: ${{ inputs.loop == 'yes' }}
       run: |
         package=$(go list .)
-        packages=$(go list ./... | tail -n +2 | sed -e "s|$package/||g" | grep -v "${{ inputs.exclude }}")
+        packages=$(go list ./... | tail -n +2 | sed -e "s|$package/||g" | egrep -v "${{ inputs.exclude }}")
         for pkg in ${packages}; do
             coveragefile=${pkg//\//-}
             gotestsum --junitfile ${coveragefile}.xml --rerun-fails=3 --raw-command \
