Set working directory to github.workspace

--- a/.github/workflows/reuse-test.yml
+++ b/.github/workflows/reuse-test.yml
@@ -39,6 +39,7 @@ jobs:
       image: tykio/ci-base:${{ inputs.release }}
       volumes:
         - ${{ github.workspace }}:${{ github.workspace }}
+      options: -w ${{ github.workspace }}
     timeout-minutes: 30
 
     # Service containers to run
