--- a/.github/workflows/reuse-test.yml
+++ b/.github/workflows/reuse-test.yml
@@ -66,6 +66,8 @@ jobs:
         with:
           token: ${{ secrets.ORG_GH_TOKEN }}
 
+      - run: echo ~/go/pkg/mod
+
       - name: "Configure Go Cache"
         uses: actions/cache@v3
         with:
