--- a/.github/workflows/reuse-preflight.yml
+++ b/.github/workflows/reuse-preflight.yml
@@ -31,6 +31,7 @@ jobs:
       image: tykio/ci-base:${{ inputs.release }}
       volumes:
         - ${{ github.workspace }}:${{ github.workspace }}
+        - /github/home:/github/home
       options: -w ${{ github.workspace }}
     timeout-minutes: 10
 
