--- a/.github/workflows/reuse-test.yml
+++ b/.github/workflows/reuse-test.yml
@@ -69,8 +69,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: ${{ runner.os }}-go-
+          key: ${{ runner.os }}-test-${{ hashFiles('**/go.sum') }}
+          restore-keys: ${{ runner.os }}-test-
 
       - name: 'Extract tykio/ci-tools'
         uses: shrink/actions-docker-extract@v3
