--- a/docker/base/latest/Dockerfile
+++ b/docker/base/latest/Dockerfile
@@ -1,5 +1,5 @@
 # The base image, overridable with arguments
-ARG BASE_IMAGE=golang:1.21
+ARG BASE_IMAGE=golang:1.21-bookworm
 
 # Install docker from docker image
 FROM docker:24-cli AS docker
