--- a/.github/workflows/reuse-test.yml
+++ b/.github/workflows/reuse-test.yml
@@ -91,6 +91,7 @@ jobs:
         uses: TykTechnologies/tyk-github-actions/.github/actions/gotestsum@main
         env:
           TYK_GW_STORAGE_HOST: redis
+          TYK_GW_STORAGE_ADDRS: redis:6379
           TYK_DB_REDISHOST: redis
           TYK_DB_STORAGE_MAIN_TYPE: sqlite
           TYK_DB_STORAGE_MAIN_CONNECTIONSTRING: /home/runner/work/tyk-analytics/tyk-analytics/test.db
