Add httpbin-logserver to ci-tools

--- a/docker/tools/latest/Dockerfile
+++ b/docker/tools/latest/Dockerfile
@@ -4,6 +4,7 @@ ENV CGO_ENABLED=0
 ENV GOBIN=/usr/local/bin
 WORKDIR /usr/local/bin
 
+RUN --mount=type=cache,mode=0755,target=/go/pkg/mod go install github.com/TykTechnologies/exp/cmd/httpbin-logserver@main
 RUN --mount=type=cache,mode=0755,target=/go/pkg/mod go install github.com/TykTechnologies/exp/cmd/schema-gen@main
 RUN --mount=type=cache,mode=0755,target=/go/pkg/mod go install github.com/TykTechnologies/exp/cmd/go-fsck@main
 RUN --mount=type=cache,mode=0755,target=/go/pkg/mod go install github.com/golang/mock/mockgen@v1.6.0
